# JessCulling

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: index.html
docs/assets/: dialog-DFcOIbgX.js  dialog-DbIt6uLD.js  index-C6BRPO8i.js  index-Cmtvrprw.css  index-DEI8DftI.css  index-WtObambT.js  tauri-DFHPio5F.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  main.rs  scoring.rs
src/components/: DuplicatePanel.tsx  ExportDialog.tsx  Header.tsx  PhotoDetail.tsx  PhotoGrid.tsx  Toolbar.tsx
src/lib/: api.ts  browser-import.ts  demo.ts  platform.ts  scoring.ts  types.ts
src/styles/: global.css
