[package]
name = "jess-helm-photography"
version = "1.0.0"
description = "Local AI Photo Culling App"
authors = ["Jess Helm Photography"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["dialog-open", "fs-all", "path-all", "shell-open"] }
image = "0.25"
imageproc = "0.24"
rusttype = "0.9"
rayon = "1.8"
walkdir = "2.4"
uuid = { version = "1.7", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
kamadak-exif = "0.5"
ndarray = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
